--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@cypress/puppeteer": "^0.1.2",
-    "cypress": "^13.6.6"
+    "cypress": "^13.6.6",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0"
   }
 }
